URL word wrap and index CSS links fixed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -103,6 +103,16 @@ article {
     box-shadow: 1px 1px 5px #555;
     position: relative;
     z-index: 1;
+
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
 }
 
 article a, article  a:visited{
